# scraper

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  telegram_login.py  worker.py
backend/app/connectors/: __init__.py  base.py  discord.py  facebook.py  news.py  telegram.py
backend/app/services/: analysis.py  ingestion.py  text.py
backend/tests/: conftest.py  test_api.py  test_connectors.py  test_text_analysis.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
