[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "palestine-signal-dashboard"
version = "0.1.0"
description = "Local-first issue signal dashboard for authorized Palestine-related sources."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "feedparser>=6.0",
  "httpx>=0.27",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.5",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "telethon>=1.36",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
